# webview_python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: bind_in_local.html  bind_in_local.py  bind_inline.py  inline_html.py  local.html  local.py  preact_simple_example.py  remote.py  simple_example.jl
examples/async_with_asyncio_guest_run/: asyncio_guest_run.py  bind_in_local_async.html  bind_in_local_async.py  bind_in_local_async_by_asyncio_guest_win32_wip.py  trio_guest_win32.py
examples/preact_offline/: preact_offline_example.html
src/: _webview_ffi.py  ffi.py  webview.py
src/webview/: _dummy_holder.pyx  _webview_ffi.py
tests/: test_library.py  test_webview.py
