[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webview_python"
version = "0.99.11"
description = "Python bindings for the webview library, which completely follow deno_webview design and principles"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["webview", "gui", "desktop", "application", "html", "web"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/congzhangzh/webview_python"
Repository = "https://github.com/congzhangzh/webview_python.git"
"Bug Tracker" = "https://github.com/congzhangzh/webview_python/issues"

[tool.hatch.build]
artifacts = ["src/webview/lib/*"]
only-include = ["src/webview"]

[tool.hatch.build.force-include]
"src/webview/lib" = "webview/lib"

[tool.hatch.build.targets.wheel]
packages = ["webview"]
include-only-binary = ["*.dll", "*.so", "*.dylib"]
is-pure=false
platforms = [
    "Windows",
    "Linux",
    "Darwin"
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
