[build-system]
requires = ["setuptools>=61.0","wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "webview_python"
version = "1.0.1"
description = "Python bindings for the webview library, which completely follow deno_webview design and principles"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["webview", "gui", "desktop", "application", "html", "web"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/congzhangzh/webview_python"
Repository = "https://github.com/congzhangzh/webview_python.git"
"Bug Tracker" = "https://github.com/congzhangzh/webview_python/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
